syntax = "proto3";
package kratos.api;

option go_package = "category/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Pool {
    int32 max_conns = 1;
    int32 min_conns = 2;
    google.protobuf.Duration max_conn_lifetime = 3;
    google.protobuf.Duration health_check_period = 4;
    google.protobuf.Duration max_conn_idle_time = 5;
  }
  message Database {
    string driver = 1;
    string source = 2;
    Pool pool = 3;
  }
  message Cache {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    google.protobuf.Duration dial_timeout = 5;
    string username = 6;
    string password = 7;
  }
  Database database = 1;
  Cache cache = 2;
}

// 认证
message Auth {
  message JWT {
    string certificate = 1 [json_name = "service_key"];
  }
  JWT jwt = 1;
}

// 可观测性
message Observability {
  message Trace {
    message GRPC {
      string endpoint = 1;
    }
    message HTTP {
      string endpoint = 1;
    }
    GRPC grpc = 2;
    HTTP http = 3;
  }
  message Logging {

  }
  message Metrics {

  }
  Trace trace = 1;
  Metrics metrics = 2;
  Logging logging = 3;
}

// 注册/配置中心
message Consul {
  message RegistryCenter {
    string address = 1;
    string scheme = 2;
    bool health_check = 3;
    string acl_token = 4;
  }
  message ConfigCenter {
    string addr = 1;
    string acl_token = 2;
  }
  RegistryCenter registry_center = 1;
  ConfigCenter config_center = 2;
}
